--- a/My Project/Resources.resx
+++ b/My Project/Resources.resx
@@ -124,17 +124,14 @@
   <data name="dlg_existed" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dlg_existed.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="savesuccessfully1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\savesuccessfully2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="500x5001" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\500x5001.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="schoolyearadd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\schoolyearadd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="500x500" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\500x500.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="updateuser" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\updateuser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="scholarship_add_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\scholarship_add_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -147,6 +144,9 @@
   </data>
   <data name="schoolyear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\schoolyear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="490" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\490.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="updatedsuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\updatedsuccessfully1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -169,8 +169,11 @@
   <data name="scholarship_update_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\scholarship_update_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="490" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\490.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="dlg_studentsupdatedsuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dlg_studentsupdatedsuccessfully1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="updatefeesicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\updatefeesicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="loginerroricon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\loginerroricon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -181,8 +184,8 @@
   <data name="lcc-logo-11-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lcc-logo-11-3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="updatefeesicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\updatefeesicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="updateuser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\updateuser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="fillupform" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fillupform.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -190,8 +193,11 @@
   <data name="savesuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\savesuccessfully1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dlg_studentsupdatedsuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dlg_studentsupdatedsuccessfully1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lccsams_logowatermark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lccsams_logowatermark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="savesuccessfully1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\savesuccessfully2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="v1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\v1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -205,8 +211,8 @@
   <data name="paymentsicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\paymentsicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="schoolyearadd" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\schoolyearadd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="adduser" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\adduser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="v2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\v2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,7 +223,13 @@
   <data name="addfeesicon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\addfeesicon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="adduser" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\adduser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="printedsuc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\printedsuc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="backupsuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backupsuccessfully.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="backuprestoredsuccessfully" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backuprestoredsuccessfully.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
